# crawler-web-scraping

./: .env-examples  README.md  pyproject.toml
crawler/: default_crowler.py  ml_browser.py  ml_request.py
providers/: browser_provider.py
