[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["DiegoFreitasDS <diegop.freitas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.19.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
